@@ -3,30 +3,45 @@ package fhcampus.myflat.services.Feedback;
 import fhcampus.myflat.dtos.FeedbackDto;
 import fhcampus.myflat.entities.Feedback;
 import fhcampus.myflat.repositories.FeedbackRepository;
-import org.springframework.beans.factory.annotation.Autowired;
+import fhcampus.myflat.services.user.UserService;
+import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
+/**
+ * Service class for handling feedback-related operations.
+ * This class provides methods to create new feedback and retrieve all feedback from the repository.
+ */
+@RequiredArgsConstructor
 @Service
 public class FeedbackService {
 
-    @Autowired
-    private FeedbackRepository feedbackRepository;
+    private final FeedbackRepository feedbackRepository;
+    private final UserService userService;
 
+    /**
+     * Creates a new feedback entry in the repository based on the provided FeedbackDto.
+     * The current user's ID is automatically set as the tenantId for the feedback.
+     * @param feedbackDto The feedback data transfer object containing the feedback details.
+     * @return FeedbackDto The saved feedback data transferred back as DTO.
+     */
     public FeedbackDto createFeedback(FeedbackDto feedbackDto) {
         Feedback feedback = new Feedback();
-        feedback.setTenantId(feedbackDto.getTenantId());
+        feedback.setTenantId(userService.getCurrentUser().getId());
         feedback.setMessage(feedbackDto.getMessage());
         feedback.setTimestamp(feedbackDto.getTimestamp());
         feedback = feedbackRepository.save(feedback);
         return feedback.toDto();
     }
 
+    /**
+     * Retrieves all feedback entries from the repository and converts them to DTOs.
+     * @return List<FeedbackDto> A list of feedback DTOs.
+     */
     public List<FeedbackDto> getAllFeedback() {
         return feedbackRepository.findAll().stream()
                 .map(Feedback::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
